# Add this directory as a subdirectory in your main project CMakeLists to include all
# libraries in the build process. You can also add specific libraries by only including
# their specific directory(s).

add_subdirectory(Helpers_lib)
add_subdirectory(Local_Helpers_lib)
add_subdirectory(FreeRTOS_Helpers_lib)
add_subdirectory(MicroROS_FreeRTOS_Helpers_lib)